--- a/testimonials.html
+++ b/testimonials.html
@@ -236,7 +236,7 @@
 
                                 <div class="testimonial-author">
                                     <h5 class="mb-0 text-capitalize">
-                                        Ольга Смирнова
+                                        Ольга Добронравова
                                     </h5>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
 
                                 <div class="testimonial-author">
                                     <h5 class="mb-0 text-capitalize">
-                                        Игорь Петров
+                                        Игорь Жуков
                                     </h5>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
 
                                 <div class="testimonial-author">
                                     <h5 class="mb-0 text-capitalize">
-                                        Марина Иванова
+                                        Марина Железнякова
                                     </h5>
                                 </div>
                             </div>
@@ -301,7 +301,7 @@
 
                                 <div class="testimonial-author">
                                     <h5 class="mb-0 text-capitalize">
-                                        Екатерина Соколова
+                                        Екатерина Дурова
                                     </h5>
                                 </div>
                             </div>
